Fixed font size on mobile

--- a/themes/iilq/assets/scss/layout/_content.scss
+++ b/themes/iilq/assets/scss/layout/_content.scss
@@ -80,7 +80,7 @@
 					letter-spacing: 3px;
 				}
 				@include breakpoint(phone-xs)  {
-					font-size: 2em;
+					font-size: 1.5em;
 					margin-bottom: 20px;
 					letter-spacing: 2px;
 				}
@@ -634,6 +634,9 @@
 			letter-spacing: 2px;
 			display: inline-block;
 			font-family: $fontsharpbold;
+			@include breakpoint(phone-xs) {
+				font-size: 3em
+			}
 		}
 		img {
 			display: inline-block;
@@ -800,6 +803,9 @@
 			letter-spacing: 2px;
 			display: inline-block;
 			font-family: $fontsharpbold;
+			@include breakpoint(phone-xs) {
+				font-size: 3em;
+			}
 		}
 		img {
 			display: inline-block;
@@ -975,6 +981,9 @@
 			@include breakpoint(phone) {
 				font-size: 2.5em;
 			}
+			@include breakpoint(phone-xs) {
+				font-size: 2em;
+			}
 		}
 		p {
 			@include regular-text;
@@ -1137,6 +1146,9 @@
 			font-family: $fontsharpbold;
 			@include breakpoint(phone) {
 				font-size: 2.5em;
+			}
+			@include breakpoint(phone-xs) {
+				font-size: 2em;
 			}
 		}
 		p {
