--- a/themes/iilq/assets/scss/layout/_popup.scss
+++ b/themes/iilq/assets/scss/layout/_popup.scss
@@ -141,7 +141,6 @@
 					color: #3f444e;
 				    line-height: 1.5;
 				    font-size: 1em;
-				    text-align: justify;
 				    margin-top: 30px;
 				}
 				textarea {
